--- a/templates/account.html
+++ b/templates/account.html
@@ -3,71 +3,67 @@
 
 <head>
   <title>DigiNotes: Create an Account</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Roboto+Serif:wght@400;700;900&display=swap"
     rel="stylesheet">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       background-color: blueviolet;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .home-btn {
+      position: fixed;
+      top: 14px;
+      left: 20px;
+      height: 40px;
+      width: 40px;
+      border: 2px solid black;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .form-container {
+      font-family: "Roboto Serif", sans-serif;
+      background-color: #e0aaff;
+      width: 100%;
+      max-width: 500px;
+      padding: 40px 30px;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px 5px #332f2f;
       text-align: center;
     }
 
-    button {
-      height: 30px;
-      width: 100px;
-      font-size: 15px;
-      font-weight: bold;
-      font-family: "Roboto Serif", sans-serif;
-      border: 2px solid black;
-      border-radius: 5px;
-      background-color: #aa7bc3;
-    }
-
-    button:hover {
-      box-shadow: 3px 3px 3px 3px blueviolet;
-      color: #aa7bc3;
-      background-color: black;
-      font-weight: bold;
-    }
-
-    div {
-      font-family: "Roboto Serif", sans-serif;
-      position: absolute;
-      left: 440px;
-      background-color: #e0aaff;
-      height: 450px;
-      width: 550px;
-      border-radius: 10px;
-      box-shadow: 5px 5px 5px 5px #332f2f;
-    }
-
     h3 {
-      font-size: 30px;
-    }
-
-    img {
-      height: 40px;
-      width: 40px;
-      position: absolute;
-      top: 14px;
-      left: 30px;
-      border: 2px solid black;
-    }
-
-    img:hover {
-      cursor: pointer;
+      font-size: 28px;
+      margin-bottom: 25px;
+      color: black;
     }
 
     input {
       font-size: 15px;
       font-family: "Roboto Serif", sans-serif;
-      height: 30px;
-      width: 200px;
+      height: 35px;
+      width: 100%;
+      max-width: 280px;
+      padding: 5px 10px;
+      border: 1px solid #999;
+      border-radius: 5px;
     }
 
     input:hover {
@@ -78,40 +74,63 @@
       font-weight: bold;
       color: red;
       font-family: "Roboto Serif", sans-serif;
+      font-size: 14px;
+      margin: 5px 0 15px;
+      min-height: 20px;
+    }
+
+    button {
+      height: 35px;
+      width: 120px;
+      font-size: 15px;
+      font-weight: bold;
+      font-family: "Roboto Serif", sans-serif;
+      border: 2px solid black;
+      border-radius: 5px;
+      background-color: #aa7bc3;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      box-shadow: 3px 3px 3px 3px blueviolet;
+      color: #aa7bc3;
+      background-color: black;
+    }
+
+    @media (max-width: 480px) {
+      .form-container {
+        padding: 30px 20px;
+      }
+
+      h3 {
+        font-size: 24px;
+      }
+
+      input {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 
 <body>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div>
+  <img onclick="home_page();" class="home-btn" src="{{ url_for('static', filename='home_icon.png') }}">
 
+  <div class="form-container">
     <form action="/account" method="post">
       <h3>Sign In</h3>
       <input autocomplete="off" autofocus name="username" placeholder="Enter your username">
       <p>{{message1}}</p>
-      <br>
-      <input autocomplete="off" autofocus name="password" placeholder="Enter your password">
+      <input autocomplete="off" name="password" placeholder="Enter your password">
       <p>{{message2}}</p>
-      <br>
       <button type="submit">Submit</button>
     </form>
   </div>
 
-  <img onclick="home_page();" id="home_icon" src="{{ url_for('static', filename='home_icon.png') }}">
-
-
   <script>
-    let home = document.getElementById('home_icon');
-
     function home_page() {
-      home.addEventListener('click', function () {
-        window.location.href = "/landing";
-      });
+      window.location.href = "/landing";
     }
   </script>
 </body>
