--- a/templates/main.html
+++ b/templates/main.html
@@ -1,176 +1,143 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>DigiNotes: Home</title>
 
-<head>
-  <title>DigiNotes: Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Roboto+Serif:wght@400;700;900&display=swap"
-    rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    body {
-      color: white;
-      font-family: "Inter", sans-serif;
-      overflow-x: hidden;
-    }
-
-    #navbar {
-      height: 50px;
-      background-color: #003459;
-      display: flex;
-      align-items: center;
-      padding: 0 20px;
-      gap: 15px;
-    }
-
-    #logo {
-      height: 30px;
-      width: 30px;
-    }
-
-    #navbar p {
-      font-family: "Inter", sans-serif;
-      font-weight: bold;
-      font-size: 18px;
-      color: white;
-    }
-
-    .nav-links {
-      margin-left: auto;
-      display: flex;
-      gap: 20px;
-    }
-
-    .nav-links a {
-      color: white;
-      font-family: "Inter", sans-serif;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    #hero {
-      background-color: blueviolet;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 40px 30px;
-      min-height: 500px;
-      flex-wrap: wrap;
-    }
-
-    .hero-text {
-      flex: 1;
-      min-width: 280px;
-    }
-
-    .hero-text h3 {
-      font-family: "Roboto Serif", sans-serif;
-      color: white;
-      font-weight: bold;
-      font-size: clamp(28px, 5vw, 50px);
-      line-height: 1.3;
-    }
-
-    .hero-image {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      min-width: 250px;
-    }
-
-    #stylie_and_rob {
-      max-width: 100%;
-      height: auto;
-      max-height: 450px;
-    }
-
-    .cta-container {
-      text-align: center;
-      padding: 30px;
-    }
-
-    button {
-      background-color: #e0aaff;
-      padding: 10px 30px;
-      color: black;
-      font-weight: bold;
-      font-size: 18px;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: all 0.3s;
-    }
-
-    button:hover {
-      background-color: black;
-      color: #e0aaff;
-    }
-
-    @media (max-width: 768px) {
-      #hero {
-        flex-direction: column-reverse;
-        text-align: center;
-        padding: 30px 20px;
-        min-height: auto;
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
+    <style>
+      body
+      {
+        color: white;
       }
 
-      .hero-image {
-        margin-bottom: 20px;
+      button
+      {
+        background-color: #e0aaff;
+        height: 35px;
+        width: 155px;
+        color: black;
+        font-weight: bold;
+        position: absolute;
+        left: 650px;
+        top: 635px;
+        font-size: 20px;
       }
 
-      #stylie_and_rob {
-        max-height: 250px;
+      button:hover
+      {
+        background-color: black;
+        color: #e0aaff;
       }
 
-      .nav-links {
-        gap: 12px;
+      #navbar
+      {
+        height: 45px; 
+        background-color: #003459;
       }
 
-      .nav-links a {
-        font-size: 14px;
+      #hero
+      {
+        height: 550px;
+        background-color: blueviolet;
       }
-    }
-  </style>
-</head>
+      
+      h3
+      {
+        font-family: "Roboto Serif", sans-serif;
+        color: white;
+        font-weight: bold;
+        position: absolute;
+        top: 150px;
+        left: 30px;
+        font-size: 50px;
+      }
 
-<body>
-  <div id="navbar">
-    <img id="logo" src="{{ url_for('static', filename='logo.png') }}">
-    <p>DIGINotes</p>
-    <div class="nav-links">
-      <a href="about.html">About</a>
-      <a href="tour.html">Tour</a>
+      #stylie_and_rob
+      {
+        height: 600px;
+        width: 600px;
+        position: absolute;
+        top: 30px;
+        left: 800px;
+      }
+
+      #logo
+      {
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        top: 12px;
+        left: 45px;
+      }
+
+      p
+      {
+        position: absolute;
+        top: -1px;
+        left: 80px;
+        font-family: "Inter", sans-serif;
+        font-weight: bold;
+        font-size: 20px;
+      }
+
+      a
+      {
+        color: white;
+        font-family: "Inter", sans-serif;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 20px;
+      }
+
+      #about
+      {
+        position: absolute;
+        left: 1080px;
+        top: 20px;
+      }
+
+      #tour
+      {
+        position: absolute;
+        left: 1250px;
+        top: 20px;
+      }
+    </style>
+  </head>
+  
+  <body>
+    <!--Navbar at the top -->
+    <div id="navbar">
+      <img id="logo" src="{{ url_for('static', filename='logo.png') }}">
+      <a id="about" href="about.html">About</a>
+      <a id="tour" href="tour.html">Tour</a>
+      <p>DIGINotes</p>
     </div>
-  </div>
 
-  <div id="hero">
-    <div class="hero-text">
+    <br>
+    <!--Hero section code-->
+    <div id="hero" class="fade-out">
+      <img id="stylie_and_rob" src="{{ url_for('static', filename='Stylie_and_Rob.png') }}">
+
+      <br>
+      <br>
+      <br>
+      <br>
       <h3>Stay organized. <br> Stay focused. <br> Grow more, day by day.</h3>
     </div>
-    <div class="hero-image">
-      <img id="stylie_and_rob" src="{{ url_for('static', filename='Stylie_and_Rob.png') }}">
-    </div>
-  </div>
-
-  <div class="cta-container">
+    <br>
+    <br>
     <button onclick="change_page();">Get Started</button>
-  </div>
 
-  <script>
-    function change_page() {
-      window.location.href = "/account";
-    }
-  </script>
-</body>
-
+    <script>
+      function change_page()
+      {
+        window.location.href="/account";
+      }
+    </script>
+  </body>
 </html>
