--- a/templates/main.html
+++ b/templates/main.html
@@ -1,143 +1,121 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>DigiNotes: Home</title>
 
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+<head>
+  <title>DigiNotes: Home</title>
 
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-    <style>
-      body
-      {
-        color: white;
-      }
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-      button
-      {
-        background-color: #e0aaff;
-        height: 35px;
-        width: 155px;
-        color: black;
-        font-weight: bold;
-        position: absolute;
-        left: 650px;
-        top: 635px;
-        font-size: 20px;
-      }
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+    rel="stylesheet">
+  <style>
+    body {
+      color: white;
+    }
 
-      button:hover
-      {
-        background-color: black;
-        color: #e0aaff;
-      }
+    button {
+      background-color: #e0aaff;
+      height: 35px;
+      width: 155px;
+      color: black;
+      font-weight: bold;
+      position: absolute;
+      left: 650px;
+      top: 635px;
+      font-size: 20px;
+    }
 
-      #navbar
-      {
-        height: 45px; 
-        background-color: #003459;
-      }
+    button:hover {
+      background-color: black;
+      color: #e0aaff;
+    }
 
-      #hero
-      {
-        height: 550px;
-        background-color: blueviolet;
-      }
-      
-      h3
-      {
-        font-family: "Roboto Serif", sans-serif;
-        color: white;
-        font-weight: bold;
-        position: absolute;
-        top: 150px;
-        left: 30px;
-        font-size: 50px;
-      }
+    #navbar {
+      height: 45px;
+      background-color: #003459;
+    }
 
-      #stylie_and_rob
-      {
-        height: 600px;
-        width: 600px;
-        position: absolute;
-        top: 30px;
-        left: 800px;
-      }
+    #hero {
+      height: 550px;
+      background-color: blueviolet;
+    }
 
-      #logo
-      {
-        height: 30px;
-        width: 30px;
-        position: absolute;
-        top: 12px;
-        left: 45px;
-      }
+    h3 {
+      font-family: "Roboto Serif", sans-serif;
+      color: white;
+      font-weight: bold;
+      position: absolute;
+      top: 150px;
+      left: 30px;
+      font-size: 50px;
+    }
 
-      p
-      {
-        position: absolute;
-        top: -1px;
-        left: 80px;
-        font-family: "Inter", sans-serif;
-        font-weight: bold;
-        font-size: 20px;
-      }
+    #stylie_and_rob {
+      height: 600px;
+      width: 600px;
+      position: absolute;
+      top: 30px;
+      left: 800px;
+    }
 
-      a
-      {
-        color: white;
-        font-family: "Inter", sans-serif;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 20px;
-      }
+    #logo {
+      height: 30px;
+      width: 30px;
+      position: absolute;
+      top: 12px;
+      left: 45px;
+    }
 
-      #about
-      {
-        position: absolute;
-        left: 1080px;
-        top: 20px;
-      }
+    p {
+      position: absolute;
+      top: -1px;
+      left: 80px;
+      font-family: "Inter", sans-serif;
+      font-weight: bold;
+      font-size: 20px;
+    }
 
-      #tour
-      {
-        position: absolute;
-        left: 1250px;
-        top: 20px;
-      }
-    </style>
-  </head>
-  
-  <body>
-    <!--Navbar at the top -->
-    <div id="navbar">
-      <img id="logo" src="{{ url_for('static', filename='logo.png') }}">
-      <a id="about" href="about.html">About</a>
-      <a id="tour" href="tour.html">Tour</a>
-      <p>DIGINotes</p>
-    </div>
+    a {
+      color: white;
+      font-family: "Inter", sans-serif;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 20px;
+    }
+  </style>
+</head>
+
+<body>
+  <!--Navbar at the top -->
+  <div id="navbar">
+    <img id="logo" src="{{ url_for('static', filename='logo.png') }}">
+
+    <p>DIGINotes</p>
+  </div>
+
+  <br>
+  <!--Hero section code-->
+  <div id="hero" class="fade-out">
+    <img id="stylie_and_rob" src="{{ url_for('static', filename='Stylie_and_Rob.png') }}">
 
     <br>
-    <!--Hero section code-->
-    <div id="hero" class="fade-out">
-      <img id="stylie_and_rob" src="{{ url_for('static', filename='Stylie_and_Rob.png') }}">
-
-      <br>
-      <br>
-      <br>
-      <br>
-      <h3>Stay organized. <br> Stay focused. <br> Grow more, day by day.</h3>
-    </div>
     <br>
     <br>
-    <button onclick="change_page();">Get Started</button>
+    <br>
+    <h3>Stay organized. <br> Stay focused. <br> Grow more, day by day.</h3>
+  </div>
+  <br>
+  <br>
+  <button onclick="change_page();">Get Started</button>
 
-    <script>
-      function change_page()
-      {
-        window.location.href="/account";
-      }
-    </script>
-  </body>
+  <script>
+    function change_page() {
+      window.location.href = "/account";
+    }
+  </script>
+</body>
+
 </html>
